--- a/css/main.css
+++ b/css/main.css
@@ -5,9 +5,9 @@ body {
         linear-gradient(to right, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.1));
 }
 
-.nav-table {
-    list-style: none;
-    display: flex;
+.navbar-title {
+    font-size: 18px; 
+    font-weight: bold; 
 }
 
 .nav-table li {
